--- a/FAQ_TRIBHUWAN/faq.css
+++ b/FAQ_TRIBHUWAN/faq.css
@@ -1,6 +1,10 @@
 @import url(https://fonts.google.com/specimen/Kumbh+Sans);
-
-
+*{
+  box-sizing: border-box;
+}
+.html{
+  height: 100%;
+}
 :root {
   --softRed: hsl(14, 88%, 65%);
   --veryDarkGrayBlue: hsl(237, 12%, 33%);
@@ -9,21 +13,37 @@
   --fontSize: 12px;
 
 }
-
+/* body {
+  height: 100%;
+  margin: 0; 
+  padding: 0;
+  font-family: 'Kumbh Sans', sans-serif;
+  background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+} */
 
 body {
-  margin: 0;
+  /* margin: 0;
   font-family: "Kumbh", sans-serif;
   height: 100vh;
   width: 100vw;
   background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
   display: grid;
   justify-content: center;
-  align-content: center;
+  align-content: center; */
+  height: 100%;
+    margin: 0; 
+    padding: 0;
+    font-family: 'Kumbh Sans', sans-serif;
+    background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
+
 .whole_card {
-  background-color: white;
+  /* background-color: white;
   border-radius: 30px;
   height: 571px;
   width: 920px;
@@ -32,10 +52,18 @@ body {
   grid-gap: 6rem;
   background-image: url(bg-pattern-desktop.svg);
   background-repeat: no-repeat;
-  background-position: 1260% 65%;
-
-
+  background-position: 1260% 65%; */
+  width: 70%;
+  min-height: 350px;
+  /* padding-top: 6% ; */
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  margin: 10% auto;
+  border-radius: 35px;
 }
+
+
 
 /* .advice {
   border: 1rem;
@@ -48,20 +76,22 @@ body {
   display: none;
 }
 
-.active .answer {
+/* .active .answer {
   display: block;
   padding-bottom: 1.3rem;
   color: var(--veryDarkGrayBlue);
   transition: all .3s ease-in;
+} */
+.women-mobile, .bg-pattern{
+  display: none;
 }
-
-.accordion_question_answer {
+/* .accordion_question_answer {
 
   width: 350px;
   border-bottom: 1px solid #e8e8ea;
 
 
-}
+} */
 
 h1 {
   font-size: 3rem;
@@ -78,12 +108,11 @@ h2 {
 }
 
 .arrow {
-
   align-self: center;
 }
 
 
-li {
+/* li {
 
   display: flex;
   justify-content: space-between;
@@ -91,40 +120,91 @@ li {
 
   transition: 0.4s;
 
-}
+} */
 
 
 
-a,
+/* a,
 ul {
   text-decoration: none;
   list-style: none;
 
+} */
+ul{
+  padding-left: 0;
+  list-style-type: none;
 }
+li {
+  
+  border-bottom: 1px solid hsl(240, 5%, 91%);
 
+ 
+}
 .image_wrap {
-  background: url(illustration-woman-online-desktop.svg);
+  /* background: url(illustration-woman-online-desktop.svg);
   height: 100%;
   background-repeat: no-repeat;
-  background-position: 120% center;
-
-
-}
-
-.box {
+  background-position: 120% center; */
 
   position: relative;
+  width: 50%;
+  background: url("bg-pattern-desktop.svg"),url("illustration-woman-online-desktop.svg")  ;
+  background-size: 100 80% ;
+  background-repeat: no-repeat, no-repeat;
+  background-position-x: -585px, -72px;
+  background-position-y: -400px, top;
+
+}
+.accordion_question_answer.active .answer{
+  display: block;
+}
+.box {
+
+  /* position: relative;
   top: 260px;
-  left: -6rem;
+  left: -6rem; */
+  position: absolute;
+    top: 117px;
+    left: -98px
 }
 
 .accordion_wrap {
-  overflow: hidden;
+  /* overflow: hidden; */
+  /* word-wrap    : break-word;
+  overflow-wrap: break-word; */
+  width: 50%;
+  padding-right: 70px;
+  font-size: 18px;
+  padding-bottom: 4%;
+  color: hsl(238, 29%, 16%);
+}
+.question{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+}
+.question:hover{
+  cursor: pointer;
+  color: hsl(14, 88%, 65%);
+}
+.answer{
+  display: none;
+
 }
 
+.active img{
+  transform: rotate(180deg);
+  transition: all 0.3s ease-out;
+}
+.answer {
+margin-top: 0;
+overflow: hidden;
+color: hsl(240, 6%, 50%);  
+}  
 
-@media (max-width: 700px) {
-  .whole_card {
+@media only screen and (max-width: 375px) {
+  /* .whole_card {
     width: 350px;
     grid-template-columns: 1fr;
     grid-template-rows: 100px 1fr;
@@ -139,11 +219,62 @@ ul {
     /* height: 100%;
     background-repeat: no-repeat;
     background-position: 120% center; */
-  }
+  /* }
 
   .image_wrap {
     display: none;
-  }
+  } */ 
+
+.whole_card{
+    width: 86%;
+    margin: 120px auto;
+    min-height: 375px;
+    flex-direction: column;
+}
+
+.image_wrap{
+width: 100%;
+height: 100px;
+background: none;
+position: relative;
+}
+.box{
+    display: none;
+}
+.women-mobile, .bg-pattern{
+    display: block;
+}
+.women-mobile{
+    position: relative;
+    /* bottom: 130px;
+    left: 1px; */
+    bottom: 130px;
+        left: 1px;
+}
+.bg-pattern{
+position: relative;
+left: 47px;
+bottom: 218px;
+}
+.accordion_wrap{
+width: 100%;
+min-height: 400px;
+margin: 0 auto;
+padding: 0 20px;
+}
+h1{
+    text-align: center;
+
+}
+.question:hover{
+    color: hsl(14, 88%, 65%);
+}
+}
 
   
+/* .women-mobile, .bg-pattern{
+  display: none;
+} */
+.box-desktop{
+  display: none;
 }
