--- a/FAQ_TRIBHUWAN/faq.css
+++ b/FAQ_TRIBHUWAN/faq.css
@@ -278,3 +278,244 @@ h1{
 .box-desktop{
   display: none;
 }
+
+.card-content h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  color: hsl(238, 29%, 16%);
+
+}
+
+.card-content p{
+  padding: 1rem;
+  font-size: 1.7rem;
+  text-align: center;
+  color: hsl(275, 82%, 28%);
+
+}
+
+.mobile-divider{
+  display: none;
+}
+
+.desktop-divider{
+  display: block;
+  width: 100%;
+  padding-top: 2rem;
+
+}
+
+.advice-card{
+  background: hs1(225, 20%, 96%);
+  width: 50%;
+  max-height: fit-content;
+  margin: 0 auto;
+  margin-top: 10rem;
+  border-radius: 0.5rem;
+  padding: 2rem;
+}
+
+
+
+.dice{
+position: absolute;
+
+left: 48.5%;
+
+margin-top: 0.5rem;
+
+background: hs1(0, 0%, 97%);
+
+padding: 0.7rem;
+
+border-radius: 50%;
+
+cursor: pointer;
+border: 1px solid black;
+}
+
+
+
+.dice:hover
+{
+  box-shadow: 1px 1px 10px 1px hs1(273, 54%, 128) ;
+}
+
+
+•dice img{
+
+
+ display:flex;
+align-items: center;
+justify-items: center;
+width: 95%;
+padding-top: 1px;
+}
+
+•footer-container {
+font-size: 13px;
+text-align: center; 
+color: #fff;
+margin-bottom: 20px;
+}
+
+
+
+
+@media screen and (max-width:375px) {
+ body{
+font-family: 'Open Sans', sans-serif;
+ }
+•card-content h1{
+font-size: 1rem;
+text-align: center;
+margin-bottom: 2rem;
+color: hs1 (150, 100%, 66%);
+font-weight: 300;
+}
+•card-content{
+padding: 2rem;
+}
+
+
+.card-content p{
+font-size: 1.4rem;
+text-align: center;
+color:hs1 (193, 38%, 86%);
+font-weight: 700;
+}
+
+
+•desktop-divider{
+  display: none;
+}
+  •mobile-divider{
+  width: 95%;
+  padding-top: 2rem;
+  padding-left: 2rem;
+  }
+
+  •advice-card{
+    background: hs1(217, 19%, 24%);
+    width: 90%;
+    max-height: fit-content;
+    margin: 0 auto; 
+    margin-top: 12rem;
+    border-radius: 0.5rem;
+  }
+    •dice{ position: absolute;
+    left: 46%;
+    margin-top: -1.4rem; background:
+    hs1 (150, 100%, 66%) ;
+    padding: 0.7rem; border-radius: 50%;
+    border:none;
+    cursor: pointer;
+    }
+
+
+    •dice:hover
+{
+box-shadow: 1px 1px 10px 1px hsl (150, 100%, 66%);
+}
+
+•dice img{ display:flex;
+align-items: centers;
+ justify-items: center; 
+ width: 90%;
+padding-top: 2px;
+}
+
+}
+
+
+
+
+.advice-number {
+  color: var(--neon-green);
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 14px;
+  font-weight: 800;
+}
+
+.quotes {
+  font-size: 1.75rem;
+  color: var(--light-cyan);
+  font-weight: 800;
+  padding: 0 1rem;
+}
+.line {
+  width: 90%;
+  height: 2rem;
+  display: flex;
+  flex-direction: row;
+  padding-top: 0.6rem;
+  align-items: center;
+  margin: 0 auto;
+}
+.line::before,
+.line::after {
+  content: " ";
+  background-color: var(--white);
+  opacity: 0.2;
+  width: 70%;
+  height: 1px;
+}
+.line-image {
+  background-image: url("images/pattern-divider-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 10rem;
+  height: 2rem;
+}
+
+.main-container {
+  position: relative;
+  max-width: 33.75rem;
+  width: 90%;
+  min-width: 10rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.28rem;
+  margin: 0 auto;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  background-color: var(--grayish-blue);
+  border-radius: 10px;
+  padding: 3.2rem 1.5rem;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.dice-img {
+  position: absolute;
+  cursor: pointer;
+  background-color: var(--neon-green);
+  background-image: url("icon-dice.svg");
+  background-position: 50%;
+  background-repeat: no-repeat;
+  transform: translateY(30%) translateX(-50%);
+  left: 50%;
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  transition: all ease-in-out 0.3s;
+
+}
+
+@media (hover: hover) {
+  .dice-img:hover {
+    box-shadow: -1px 1px 88px 12px rgba(82, 255, 168, 1);
+    -webkit-box-shadow: -1px 1px 88px 12px rgba(82, 255, 168, 1);
+    -moz-box-shadow: -1px 1px 88px 12px rgba(82, 255, 168, 1);
+    transition: all ease-in-out 0.3s;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .main-container {
+    margin-top: 13.75rem;
+  }
+}
+
